# validador-cpf

./: .gitignore  README.md  main.py  pyproject.toml  validaCPF_enunciado.py
src/: __init__.py  add_mask.py  calculate_digit.py  generate_cpf.py  generate_cpf_body.py  generate_validation_digits.py  main.py  remove_mask.py  split_cpf.py  validate_body.py  validate_cpf.py
tests/: test_add_mask.py  test_calculate_digit.py  test_generate_cpf.py  test_generate_cpf_body.py  test_generate_validation_digits.py  test_remove_mask.py  test_split_cpf.py  test_validate_body.py  test_validate_cpf.py
