[tool.poetry]
name = "validador-cpf"
version = "0.1.0"
description = ""
authors = ["Renan Andrade <Fel9.renan02@gmail.com>"]
readme = "README.md"
packages = [{include = "validador_cpf"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
